add batch_start/end to stream poller
Signed-off-by: Yupeng Fu <yupeng@uber.com>